<resources>
    <string name="app_name">HCBCounter</string>
    <string name="txtInn">0</string>
    <string name="txtOut">0</string>
    <string name="txtTotal">0</string>
    <string name="txtHora">00:00:00</string>
    <string name="btnInn">Inn</string>
    <string name="btnOut">Out</string>
    <string name="btnReset">Reset</string>
    <string name="btnMostrarDades">Send</string>
    <string name="btnReturn">Return</string>
    <string name="btnEnviar">Send</string>
    <string name="txtCorreu">Email:</string>
    <string name="edCorreu">ex@gmail.com</string>
    <string name="MenuEnviar">Send</string>
    <string name="MenuReset">Reset</string>
    <string name="MenuIncrement">Increse</string>
    <string name="MenuDecrement">Decrese</string>
    <string name="MenuSetting">Setting</string>
    <string name="MenuEmail">E-mail</string>
</resources>
